fix: remove deprecated API usages